objects/Sales_Line__c/Sales_Line__c.object-meta.xml
<CustomObject>
    <label>Sales Line</label>
    <nameField>
        <displayFormat>SL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>