objects/Sales_Line__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <formula>TEXT(Sales_Order_Job_Task__r.Billing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Task Billing Type</label>
    <type>Text</type>
</CustomField>