objects/Sales_Line__c/fields/Bundle_Line__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>Sales_Line__c.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Sales Lines (Bundle)</relationshipLabel>
    <relationshipName>Bundle_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>