objects/Sales_Line__c/fields/Bundle_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Pricing_Method__c</fullName>
    <label>Bundle Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
                <label>Bundled Per Unit Amount</label>
            </value>
            <value>
                <fullName>Per Total</fullName>
                <label>Bundled Per Total Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>