objects/Sales_Line__c/fields/Child_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Line_Count__c</fullName>
    <label>Child Line Count</label>
    <summaryForeignKey>Sales_Parent_Child_Relation__c.Parent_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>