objects/Sales_Line__c/fields/Contract_Regular_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Regular_Rate__c</fullName>
    <label>Contract Regular Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>