objects/Sales_Line__c/fields/Data_Fix_Note__c.field-meta.xml
<CustomField>
    <fullName>Data_Fix_Note__c</fullName>
    <label>Data Fix Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>