objects/Sales_Line__c/fields/Dereferenced_Child_Resource__c.field-meta.xml
<CustomField>
    <fullName>Dereferenced_Child_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dereferenced Child Resource</label>
    <type>Checkbox</type>
</CustomField>