objects/Sales_Line__c/fields/EQAI_UOM__c.field-meta.xml
<CustomField>
    <fullName>EQAI_UOM__c</fullName>
    <label>EQAI UOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>