objects/Sales_Line__c/fields/Hours_Saved_Lightning_Backup__c.field-meta.xml
<CustomField>
    <fullName>Hours_Saved_Lightning_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Saved (Lightning Backup)</label>
    <type>Checkbox</type>
</CustomField>