objects/Sales_Line__c/fields/isContractLineNotEditable__c.field-meta.xml
<CustomField>
    <fullName>isContractLineNotEditable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isContractLineNotEditable</label>
    <type>Checkbox</type>
</CustomField>