objects/Sales_Line__c/fields/Lenght__c.field-meta.xml
<CustomField>
    <fullName>Lenght__c</fullName>
    <formula>LEN(Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lenght</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>