objects/Sales_Line__c/fields/Line_Amount_Test__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount_Test__c</fullName>
    <formula>Sales_Order_Job_Task__r.Amount_To_Bill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>