objects/Sales_Line__c/fields/Line_No__c.field-meta.xml
<CustomField>
    <fullName>Line_No__c</fullName>
    <label>Line No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>