objects/Sales_Line__c/fields/Manually_Entered_Cost__c.field-meta.xml
<CustomField>
    <fullName>Manually_Entered_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Entered Cost</label>
    <type>Checkbox</type>
</CustomField>