objects/Sales_Line__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>