objects/Sales_Line__c/fields/Markup_Option__c.field-meta.xml
<CustomField>
    <fullName>Markup_Option__c</fullName>
    <label>Markup Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>