objects/Sales_Line__c/fields/Number_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Day__c</fullName>
    <label>Number of Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>