objects/Sales_Line__c/fields/Overtime_Day__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Day__c</fullName>
    <label>Overtime Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>