objects/Sales_Line__c/fields/Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Sales Lines (Parent Line)</relationshipLabel>
    <relationshipName>Child_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>