objects/Sales_Line__c/fields/Premium_Day__c.field-meta.xml
<CustomField>
    <fullName>Premium_Day__c</fullName>
    <label>Premium Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>