objects/Sales_Line__c/fields/Premium_Hours__c.field-meta.xml
<CustomField>
    <fullName>Premium_Hours__c</fullName>
    <label>Double Time Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>