objects/Sales_Line__c/fields/Premium_Hours_Lightning_Backup__c.field-meta.xml
<CustomField>
    <fullName>Premium_Hours_Lightning_Backup__c</fullName>
    <label>Premium Hours (Lightning Backup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>