objects/Sales_Line__c/fields/Pricing_Source_2__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Source_2__c</fullName>
    <label>Pricing Source 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>