objects/Sales_Line__c/fields/Process_Code__c.field-meta.xml
<CustomField>
    <fullName>Process_Code__c</fullName>
    <label>Process Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>