objects/Sales_Line__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>Sales_Line__c</referenceTo>
    <relationshipLabel>Sales Lines</relationshipLabel>
    <relationshipName>Sales_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>