objects/Sales_Line__c/fields/Reg_hrs_OT_hrs_DT_hrs_8__c.field-meta.xml
<CustomField>
    <fullName>Reg_hrs_OT_hrs_DT_hrs_8__c</fullName>
    <formula>Regular_Hours__c + Overtime_Hours__c + Premium_Hours__c  &lt; 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg hrs + OT hrs + DT hrs &lt; 8</label>
    <type>Checkbox</type>
</CustomField>