objects/Sales_Line__c/fields/Regular_Day__c.field-meta.xml
<CustomField>
    <fullName>Regular_Day__c</fullName>
    <label>Regular Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>