objects/Sales_Line__c/fields/Regular_Hours_Lightning_Backup__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours_Lightning_Backup__c</fullName>
    <label>Regular Hours (Lightning Backup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>