objects/Sales_Line__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Sales Lines</relationshipLabel>
    <relationshipName>Sales_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>