objects/Sales_Line__c/fields/Rolled_up_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Rolled_up_Unit_Price__c</fullName>
    <label>Rolled-up Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>