objects/Sales_Line__c/fields/Sales_Order_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Job_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Job Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>Sales_Order_Job_Task__c.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order_Job_Task__c</referenceTo>
    <relationshipLabel>Sales Lines</relationshipLabel>
    <relationshipName>Sales_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>