objects/Sales_Line__c/fields/TempAmtNotEqual__c.field-meta.xml
<CustomField>
    <fullName>TempAmtNotEqual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempAmtNotEqual</label>
    <type>Checkbox</type>
</CustomField>