objects/Sales_Line__c/fields/TempDataCheck__c.field-meta.xml
<CustomField>
    <fullName>TempDataCheck__c</fullName>
    <formula>Unit_Cost__c ==  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TempDataCheck</label>
    <type>Checkbox</type>
</CustomField>