objects/Sales_Line__c/fields/TempDataUpdated__c.field-meta.xml
<CustomField>
    <fullName>TempDataUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempDataUpdated</label>
    <type>Checkbox</type>
</CustomField>