objects/Sales_Line__c/fields/TempERRate__c.field-meta.xml
<CustomField>
    <fullName>TempERRate__c</fullName>
    <label>TempERRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>