objects/Sales_Line__c/fields/TempLineAmt__c.field-meta.xml
<CustomField>
    <fullName>TempLineAmt__c</fullName>
    <label>TempLineAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>