objects/Sales_Line__c/fields/TempLineAmtIncTax__c.field-meta.xml
<CustomField>
    <fullName>TempLineAmtIncTax__c</fullName>
    <label>TempLineAmtIncTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>