objects/Sales_Line__c/fields/TempRegRate__c.field-meta.xml
<CustomField>
    <fullName>TempRegRate__c</fullName>
    <label>TempRegRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>