objects/Sales_Line__c/fields/TempTotalCalc__c.field-meta.xml
<CustomField>
    <fullName>TempTotalCalc__c</fullName>
    <label>TempTotalCalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>