objects/Sales_Line__c/fields/TempTotalCheck__c.field-meta.xml
<CustomField>
    <fullName>TempTotalCheck__c</fullName>
    <formula>IF(OR(Non_Billable__c == TRUE, Bill_as_Lump_Sum__c == TRUE),  ROUND(xLine_Amount__c,2) ==  TempTotalCalc__c, ROUND(Line_Amount__c,2) ==  TempTotalCalc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TempTotalCheck</label>
    <type>Checkbox</type>
</CustomField>