objects/Sales_Line__c/fields/TempUnitCost__c.field-meta.xml
<CustomField>
    <fullName>TempUnitCost__c</fullName>
    <label>TempUnitCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>