objects/Sales_Line__c/fields/TempUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>TempUnitPrice__c</fullName>
    <label>TempUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>