objects/Sales_Line__c/fields/TempxLineAmt__c.field-meta.xml
<CustomField>
    <fullName>TempxLineAmt__c</fullName>
    <label>TempxLineAmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>