objects/Sales_Line__c/fields/TempxUnitCost__c.field-meta.xml
<CustomField>
    <fullName>TempxUnitCost__c</fullName>
    <label>TempxUnitCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>