objects/Sales_Line__c/fields/TempxUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>TempxUnitPrice__c</fullName>
    <label>TempxUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>