objects/Sales_Line__c/fields/Unit_Weight_Vol__c.field-meta.xml
<CustomField>
    <fullName>Unit_Weight_Vol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Wt./Vol</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Sales Lines (Unit Wt./Vol)</relationshipLabel>
    <relationshipName>Sales_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>