objects/Sales_Line__c/fields/UOM_Qty__c.field-meta.xml
<CustomField>
    <fullName>UOM_Qty__c</fullName>
    <label>UOM Qty.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>