objects/Sales_Line__c/fields/xLine_Amount__c.field-meta.xml
<CustomField>
    <fullName>xLine_Amount__c</fullName>
    <label>xLine Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>