objects/Sales_Line__c/fields/xLine_Cost__c.field-meta.xml
<CustomField>
    <fullName>xLine_Cost__c</fullName>
    <label>xLine Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>