objects/Sales_Line__c/validationRules/Description_Field_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Field_Length</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISCLONE()), 
    NOT( Sales_Order__r.Expired__c ),  
       AND(
            NOT(ISPICKVAL(Category__c, "Labor")),  
            LEN(Description__c) &gt; 100
        )
)</errorConditionFormula>
    <errorMessage>Description value is too long (max length = 100). Please edit the Description and Save.</errorMessage>
</ValidationRule>