objects/Sales_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Resource_Type__c</columns>
    <columns>Resource__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>